--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
 * {
     box-sizing: border-box;
 }
+
+.game {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.game-scores{
+    display: flex;
+    gap: 10px;
+}
